service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - name: api-port
      protocol: TCP
      port: 80
      targetPort: 4000  # For the API
    - name: client-port
      protocol: TCP
      port: 81
      targetPort: 3000  # For the client
  type: LoadBalancer
